<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/title_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_above="@+id/author_ip"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/author_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:layout_centerInParent="true"
        />

    <EditText
        android:id="@+id/page_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/mob_no"
        android:layout_below="@+id/author_ip"
        android:layout_centerHorizontal="true"
      />
    <Button
        android:id="@+id/add"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/save_contact"
        android:layout_below="@+id/page_ip"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>