<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modifydata">

    <EditText
        android:id="@+id/title_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:textSize="22sp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        />


    <Button
        android:id="@+id/up"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_below="@+id/title_op"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_below="@+id/up"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>